Create and Retrieve of Course Coordination done. TODO: Disable function.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -16,7 +16,7 @@ core.menu.login = Log in
 core.menu.generalSettings = General Settings
 core.menu.generalSettings.manageAcademics = Manage Academics
 core.menu.generalSettings.manageCourses = Manage Courses
-core.menu.generalSettings.courseCoordinations = Manage Course Coordinations
+core.menu.generalSettings.manageCourseCoordinations = Manage Course Coordinations
 
 # Text for use case "Install System":
 installSystem.button.registerAdministrator = Register admin
@@ -103,8 +103,6 @@ manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
 
 # Text for use case "Manage Courses":
-manageCourses.button.addCoordination = Add Coordination
-manageCourses.button.finalizeCoordination = Finalize Coordination
 manageCourses.form.title = Course registration form
 manageCourses.field.creationDate = Created at
 manageCourses.field.lastLoginDate = Last login at
@@ -122,14 +120,40 @@ manageCourses.text.noEntitiesFiltered = No course found for this filter
 manageCourses.title = Manage Courses
 manageCourses.title.description = Create, retrieve, update and delete data about courses
 manageCourses.title.create = Register new Course
-manageCourses.title.create.description = Insert new academic information
-manageCourses.title.description = Create, retrieve, update and delete data about courses
+manageCourses.title.create.description = Insert new course information
 manageCourses.title.update = Update Course
 manageCourses.title.update.description = Modify an existing course's information
 manageCourses.title.retrieve = Course's data
 manageCourses.title.retrieve.description = View an existing course's information
 manageCourses.title.courseCoordination = Course Coordination
 manageCourses.title.description.courseCoordination = Add or finalize a coordination on a course
+
+# Text for use case "Manage Course Coordinations":
+manageCourseCoordinations.button.addCoordination = Add Coordination
+manageCourseCoordinations.button.finalizeCoordination = Finalize Coordination
+manageCourseCoordinations.form.title = Course Coordination registration form
+manageCourseCoordinations.field.startDate = Started at
+manageCourseCoordinations.field.endDate = Ended at
+manageCourseCoordinations.field.courseName = Course Name
+manageCourseCoordinations.field.courseCode = Course Code
+manageCourseCoordinations.field.courseCoordinator = Course Coordinator
+manageCourseCoordinations.field.courseCoordinator.placeholder = Name of the Course Coordinator
+manageCourseCoordinations.text.deleteSucceeded = Successfully deleted {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
+manageCourseCoordinations.text.filter.byName = Filter by name:
+manageCourseCoordinations.text.noEntities = No Course Coordinations registered yet
+manageCourseCoordinations.text.noEntitiesFiltered = No course coordination found for this filter
+manageCourseCoordinations.text.selectCourse = Select a Course
+manageCourseCoordinations.text.selectCoordinator = Select a Coordinator
+manageCourseCoordinations.text.noCourses = No Courses without coordination
+manageCourseCoordinations.text.noCoordinators = No Coordinators without coordination
+manageCourseCoordinations.title = Manage Course Coordinations
+manageCourseCoordinations.title.description = Create, retrieve and disable data about course coordinations
+manageCourseCoordinations.title.create = Register new Course Coordination
+manageCourseCoordinations.title.create.description = Insert new course coordination information
+manageCourseCoordinations.title.retrieve = Course Coordination's data
+manageCourseCoordinations.title.retrieve.description = View an existing course coordination's information
+manageCourseCoordinations.title.courseCoordination = Course Coordination
+manageCourseCoordinations.title.description.courseCoordination = Add or finalize a coordination on a course coordination
 
 
 # Text for use case "Change Password":
