Improvement on AcademicRole and CourseCoordination.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -79,6 +79,7 @@ manageAcademics.field.lastUpdateDate = Updated at
 manageAcademics.field.name = Name
 manageAcademics.field.name.placeholder = Full name of the academic
 manageAcademics.field.roles = Roles
+manageAcademics.field.academicRoles = Academic Roles
 manageAcademics.field.shortName = Short name
 manageAcademics.field.shortName.placeholder = The name you prefer to be called
 manageAcademics.field.cpf = CPF
