Business Rules for the disable function of course coordination. Improvements on Course Coordination Forms.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -68,6 +68,8 @@ login.title.description = Identify yourself in order to use Marvin
 
 # Text for use case "Manage Academics":
 manageAcademics.error.deleteAdmin = Cannot delete user {0}: user has System Administrator privileges
+manageAcademics.error.deleteCurrentCoordinator = Cannot delete user {0}: user has a active coordination
+manageAcademics.error.deleteOldCoordinator = Cannot delete user {0}: user has links with old coordinations
 manageAcademics.form.title = Academic registration form
 manageAcademics.field.birthDate = Birth date
 manageAcademics.field.creationDate = Created at
@@ -104,6 +106,7 @@ manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
 
 # Text for use case "Manage Courses":
+manageCourses.error.deleteCourseWithCoordination = Cannot delete course {0}: course has links with coordinations
 manageCourses.form.title = Course registration form
 manageCourses.field.creationDate = Created at
 manageCourses.field.lastLoginDate = Last login at
@@ -139,7 +142,7 @@ manageCourseCoordinations.field.courseName = Course Name
 manageCourseCoordinations.field.courseCode = Course Code
 manageCourseCoordinations.field.courseCoordinator = Course Coordinator
 manageCourseCoordinations.field.courseCoordinator.placeholder = Name of the Course Coordinator
-manageCourseCoordinations.text.deleteSucceeded = Successfully deleted {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
+manageCourseCoordinations.text.disableSucceeded = Successfully disabled {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
 manageCourseCoordinations.text.filter.byName = Filter by name:
 manageCourseCoordinations.text.noEntities = No Course Coordinations registered yet
 manageCourseCoordinations.text.noEntitiesFiltered = No course coordination found for this filter
