--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -23,8 +23,11 @@ jbutler.crud.button.create = New
 jbutler.crud.button.retrieve = View
 jbutler.crud.button.update = Modify
 jbutler.crud.button.delete = Delete
+jbutler.crud.button.disable = Disable
 jbutler.crud.button.cancelDeletion = Cancel
 jbutler.crud.button.confirmDeletion = Confirm deletion
+jbutler.crud.button.cancelDeactivation = Cancel
+jbutler.crud.button.confirmDeactivation = Confirm deactivation
 jbutler.crud.button.cancel = Cancel
 jbutler.crud.button.save = Save
 jbutler.crud.button.back = Back
@@ -34,8 +37,11 @@ jbutler.crud.help.hotkeys.create = open the form for a new entry
 jbutler.crud.help.hotkeys.retrieve = open the details of the selected item
 jbutler.crud.help.hotkeys.update = open the form for modifying the selected item
 jbutler.crud.help.hotkeys.delete = add the selected item to the trash bin for deletion
+jbutler.crud.help.hotkeys.disable = add the selected item to the trash bin for deactivation
 jbutler.crud.help.hotkeys.cancelDeletion = cancel deletion and restore the items in the trash bin
 jbutler.crud.help.hotkeys.confirmDeletion = confirm the deletion of the items in the trash bin
+jbutler.crud.help.hotkeys.cancelDeletion = cancel deactivation and restore the items in the trash bin
+jbutler.crud.help.hotkeys.confirmDeletion = confirm the deactivation of the items in the trash bin
 jbutler.crud.help.hotkeys.focusFirstField = focus the first form field
 jbutler.crud.help.hotkeys.backToList = go back to the listing
 jbutler.crud.help.hotkeys.save = save changes and go back to the listing
@@ -54,6 +60,7 @@ jbutler.crud.hotkey.backToList = esc
 jbutler.crud.hotkey.cancel = esc
 jbutler.crud.hotkey.back = esc
 jbutler.crud.text.trashHeader = Items to delete:
+jbutler.crud.text.disableTrashHeader = Items to disable:
 
 # JButler default formats:
 jbutler.format.date.java=MM/dd/yyyy
