Course Attendance front-end. Marvin core is complete.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -17,6 +17,7 @@ core.menu.generalSettings = General Settings
 core.menu.generalSettings.manageAcademics = Manage Academics
 core.menu.generalSettings.manageCourses = Manage Courses
 core.menu.generalSettings.manageCourseCoordinations = Manage Course Coordinations
+core.menu.generalSettings.manageCourseAttendances = Manage Course Attendances
 
 # Text for use case "Install System":
 installSystem.button.registerAdministrator = Register admin
@@ -142,7 +143,7 @@ manageCourseCoordinations.field.courseName = Course Name
 manageCourseCoordinations.field.courseCode = Course Code
 manageCourseCoordinations.field.courseCoordinator = Course Coordinator
 manageCourseCoordinations.field.courseCoordinator.placeholder = Name of the Course Coordinator
-manageCourseCoordinations.text.disableSucceeded = Successfully disabled {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
+manageCourseCoordinations.text.disableSucceeded = Successfully disabled {0,choice,0#no course coordinations|1#one course coordination|1<{0,number,integer} course coordinations}
 manageCourseCoordinations.text.filter.byName = Filter by name:
 manageCourseCoordinations.text.noEntities = No Course Coordinations registered yet
 manageCourseCoordinations.text.noEntitiesFiltered = No course coordination found for this filter
@@ -158,6 +159,38 @@ manageCourseCoordinations.title.retrieve = Course Coordination's data
 manageCourseCoordinations.title.retrieve.description = View an existing course coordination's information
 manageCourseCoordinations.title.courseCoordination = Course Coordination
 manageCourseCoordinations.title.description.courseCoordination = Add or finalize a coordination on a course coordination
+
+# Text for use case "Manage Course Attendances":
+manageCourseAttendances.button.addAttendance = Add Attendance
+manageCourseAttendances.button.finalizeAttendance = Finalize Attendance
+manageCourseAttendances.form.title = Course Attendance registration form
+manageCourseAttendances.field.startDate = Started at
+manageCourseAttendances.field.endDate = Ended at
+manageCourseAttendances.field.courseName = Course Name
+manageCourseAttendances.field.courseCode = Course Code
+manageCourseAttendances.field.courseStudent = Course Student
+manageCourseAttendances.field.courseSituation = Course Situation
+manageCourseAttendances.field.courseStudent.placeholder = Name of the Course Student
+manageCourseAttendances.field.situation = Situation
+manageCourseAttendances.text.disableSucceeded = Successfully disabled {0,choice,0#no course attendances|1#one course attendance|1<{0,number,integer} course attendances}
+manageCourseAttendances.text.filter.byName = Filter by name:
+manageCourseAttendances.text.noEntities = No Course Attendances registered yet
+manageCourseAttendances.text.noEntitiesFiltered = No course attendance found for this filter
+manageCourseAttendances.text.selectCourse = Select a Course
+manageCourseAttendances.text.selectStudent = Select a Student
+manageCourseAttendances.text.selectSituation = Select the Reason
+manageCourseAttendances.text.situation = Select the reason to disable the academic(s):
+manageCourseAttendances.text.noCourses = No Courses registered yet
+manageCourseAttendances.text.noSituations = No Situations registered yet
+manageCourseAttendances.text.noStudents = No Students without attendance
+manageCourseAttendances.title = Manage Course Attendances
+manageCourseAttendances.title.description = Create, retrieve and disable data about course attendances
+manageCourseAttendances.title.create = Register new Course Attendance
+manageCourseAttendances.title.create.description = Insert new course attendance information
+manageCourseAttendances.title.retrieve = Course Attendance's data
+manageCourseAttendances.title.retrieve.description = View an existing course attendances's information
+manageCourseAttendances.title.courseAttendance = Course Attendance
+manageCourseAttendances.title.description.courseAttendance = Add or finalize a attendance on a course attendance
 
 
 # Text for use case "Change Password":
