--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -53,8 +53,11 @@ jbutler.crud.hotkey.create = c
 jbutler.crud.hotkey.retrieve = r
 jbutler.crud.hotkey.update = u
 jbutler.crud.hotkey.delete = d
+jbutler.crud.hotkey.disable = d
 jbutler.crud.hotkey.cancelDeletion = esc
 jbutler.crud.hotkey.confirmDeletion = y
+jbutler.crud.hotkey.cancelDeactivation = esc
+jbutler.crud.hotkey.confirmDeactivation = y
 jbutler.crud.hotkey.focusFirstField = f
 jbutler.crud.hotkey.backToList = esc
 jbutler.crud.hotkey.cancel = esc
