Improvements in SAE.

--- a/src/br/ufes/inf/nemo/marvin/sae/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/sae/view/messages.properties
@@ -1,5 +1,5 @@
 ##
-## Resource bundle for package: core
+## Resource bundle for package: sae
 ## Language: American English 
 ##
 
@@ -11,68 +11,23 @@ core.role.student = Enrolled student.
 core.role.visitor = Visitor.
 
 # Menu labels for all functionalities of the package:
-core.menu.installSystem = Install System
-core.menu.login = Log in
-core.menu.generalSettings = General Settings
-core.menu.generalSettings.manageAcademics = Manage Academics
-core.menu.generalSettings.manageCourses = Manage Courses
-core.menu.generalSettings.manageCourseCoordinations = Manage Course Coordinations
-core.menu.generalSettings.manageCourseAttendances = Manage Course Attendances
+sae.menu.generalSettings = General Settings
+sae.menu.generalSettings.manageAlumnis = Manage Alumnis
+sae.menu.generalSettings.manageAlumniHistories = Manage Alumni Histories
+sae.menu.generalSettings.manageEducations = Manage Course Coordinations
+sae.menu.generalSettings.manageStatements = Manage Course Attendances
+sae.menu.generalSettings.manageSuggestions = Manage Course Attendances
 
-# Text for use case "Install System":
-installSystem.button.registerAdministrator = Register admin
-installSystem.button.saveConfig = Save configuration
-installSystem.dialog.wait.title = Installing...
-installSystem.dialog.wait.contents = Marvin is being installed. Please wait until this operation finishes.
-installSystem.error.passwordsDontMatch.summary = Attention: passwords don't match.
-installSystem.error.passwordsDontMatch.detail = Please, make sure you typed the same password in both fields.
-installSystem.error.operationFailed.summary = Error during system install.
-installSystem.error.operationFailed.detail = A failure during the operation has prevented system installation. Please, contact Marvin's support.
-installSystem.field.admin.name = Full name
-installSystem.field.admin.name.placeholder = Your full name, please
-installSystem.field.admin.email = E-mail
-installSystem.field.admin.email.placeholder = Your e-mail will be used to identify you
-installSystem.field.admin.shortName = Short name
-installSystem.field.admin.shortName.placeholder = How would you like to be called?
-installSystem.field.admin.cpf = CPF
-installSystem.field.admin.password = Password
-installSystem.field.admin.repeatPassword = Confirm the password
-installSystem.field.config.institutionAcronym = Institution acronym
-installSystem.field.config.institutionAcronym.placeholder = This acronym will be used to customize some system messages
-installSystem.field.config.smtpServerAddress = SMTP Server
-installSystem.field.config.smtpServerAddress.placeholder = Address of the server that Marvin will use to send e-mails
-installSystem.field.config.smtpServerPort = SMTP Port
-installSystem.field.config.smtpUsername = SMTP Username
-installSystem.field.config.smtpPassword = SMTP Password
-installSystem.form.admin = Administrator information
-installSystem.form.config = Marvin configuration
-installSystem.text.systemAlreadyInstalled = Marvin is installed. Please log in using the link available in the main menu.
-installSystem.text.instructions.admin = To install Marvin, it's necessary to register an administrator. Please, fill in the form below with information from the person who will manage the system.
-installSystem.text.instructions.config = To finish installation, it is necessary to provide configuration information. Please, fill in the form below with the acronym of your institution.  
-installSystem.text.done = Congratulations! Marvin was correctly installed. Please log in using the link available in the main menu.
-installSystem.title = System Installation
-installSystem.title.description = Basic setup to get Marvin up and running.
-
-# Text for use case "Log In":
-login.button.login = Sign In
-login.error.nomatch.summary = Authentication problem.
-login.error.nomatch.detail = E-mail and/or password don't match. Please try again. If the error persists and you are sure of your credentials, please contact the administrator.
-login.error.fatal.summary = Authentication error.
-login.error.fatal.detail = Please, contact the administrators and inform the exact date and time this error occurred: {0,date,full} {0,time,full}.
-login.field.email = E-mail
-login.field.email.placeholder = The e-mail address used to register yourself
-login.field.password = Password
-login.form = Authentication information
-login.text.instructions = Please enter your credentials.
-login.title = Log In
-login.title.description = Identify yourself in order to use Marvin
-
-# Text for use case "Manage Academics":
+# Text for use case "Manage Alumnis":
 manageAcademics.error.deleteAdmin = Cannot delete user {0}: user has System Administrator privileges
 manageAcademics.error.deleteCurrentCoordinator = Cannot delete user {0}: user has a active coordination
 manageAcademics.error.deleteOldCoordinator = Cannot delete user {0}: user has links with old coordinations
 manageAcademics.form.title = Academic registration form
-manageAcademics.field.birthDate = Birth date
+manageAlumnis.field.academic.name = Name
+manageAlumnis.field.academic.birthDate = Birth date
+manageAlumnis.field.course = Course
+manageAlumnis.field.education.year = Graduation Year
+manageAlumnis.field.education.educationalInstitution = Educational Instituition 
 manageAcademics.field.creationDate = Created at
 manageAcademics.field.email = E-mail
 manageAcademics.field.lattesId = Lattes ID
