Integrate C2D's view into Marvin

--- a/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
@@ -5,7 +5,10 @@
 
 # Menu labels for all functionalities of the package:
 core.menu.research = Research
+core.menu.research.calculateAcademicsScore=Calculate Academics Scores
+core.menu.research.createNewScoreSystem=Create New Score System
 core.menu.research.generateBibliography = Generate Bibliography
+core.menu.research.importQualisData=Import Qualis Data
 core.menu.research.uploadLattesCV = Upload Lattes CV
 
 # Text for use case "Upload Lattes CV":
@@ -57,4 +60,68 @@ generateBibliography.text.result = The bibliography file has been generated. You
 generateBibliography.title = Generate Bibliography
 generateBibliography.title.description = Generates a bibliography file with entries from researchers' publications.
 
+# Text for use case "Import Qualis Data"
+importQualisData.button.cancel=Cancel
+importQualisData.button.confirm=Confirm
+importQualisData.button.upload=Upload
+importQualisData.error.CSVParseError.summary=CSV Parse Error
+importQualisData.error.CSVParseError.detail=There was an error parsing the uploaded CSV file. Please ensure that the file is properly formatted as instructed. If the error persists, please contact the administrators.
+importQualisData.error.qualisLevelNotRegisteredError.summary=Qualis Not Found
+importQualisData.error.qualisLevelNotRegisteredError.detail=There are no Qualis with level {0} in the system. Ensure that the .csv file contains valid Qualis levels.
+importQualisData.field.category=Category
+importQualisData.field.file=CSV File
+importQualisData.field.qualis=Qualis Level
+importQualisData.field.venueAcronym=Venue Acronym
+importQualisData.field.venueISSN =Venue ISSN
+importQualisData.field.venueName=Venue Name
+importQualisData.field.year=Year
+importQualisData.field.year.placeholder=Year of the qualifications.
+importQualisData.form.upload=Import Qualis Data
+importQualisData.title=Import Qualis Data
+importQualisData.title.description=Extract the qualis information on venues from the classification files.
+importQualisData.text.instructions.confirm=Please review the venues extracted from the file and confirm if you wish to assign the qualifications to them.
+importQualisData.text.instructions.success=Successfully parsed .csv file.
+importQualisData.text.instructions.upload=Upload the CSV file that contains the venues and their respective qualifications. Please ensure that the file obeys the correct format.
+importQualisData.text.noQualifiedVenues=No venues to be qualified were found in the uploaded file.
 
+#Text for use case "Create New Score System"
+createNewScoreSystem.button.save=Save
+createNewScoreSystem.field.conference=Conference Score
+createNewScoreSystem.field.journal=Journal Score
+createNewScoreSystem.field.qualis=Qualis Level
+createNewScoreSystem.title=Create New Score System
+createNewScoreSystem.title.description=Creates a new score system to evaluate academics' publications.
+createNewScoreSystem.text.instructions=Please fill the form below with the scores of Journals and Conferences for each Qualis level.
+createNewScoreSystem.text.instructions.success=Successfully created the new Score System.
+
+# Text for use case "Calculate Academics Scores"
+calculateAcademicsScores.button.addResearcher = Add
+calculateAcademicsScores.button.back = Go Back
+calculateAcademicsScores.button.calculate = Calculate
+calculateAcademicsScores.button.startOver = Start Over
+calculateAcademicsScores.error.noActiveScoreSystemError.detail = There are no score systems currently active. Please create a new score system before calculating the scores. If the error persists, please contact the administrators.
+calculateAcademicsScores.error.noActiveScoreSystemError.summary = No Active Score System Error.
+calculateAcademicsScores.form.calculate = Scores calculation configuration
+calculateAcademicsScores.field.academic = Academic
+calculateAcademicsScores.field.category = Category
+calculateAcademicsScores.field.conference = Conference Score
+calculateAcademicsScores.field.endYear = End Year
+calculateAcademicsScores.field.journal = Journal Score
+calculateAcademicsScores.field.publication = Publication
+calculateAcademicsScores.field.researcher = Researcher
+calculateAcademicsScores.field.researchers = Researchers
+calculateAcademicsScores.field.score = Score
+calculateAcademicsScores.field.startYear = Start Year
+calculateAcademicsScores.field.total = Total Score
+calculateAcademicsScores.field.venue = Venue
+calculateAcademicsScores.field.year = Year 
+calculateAcademicsScores.field.endYear.placeholder = Consider publications up to this year. Leave blank not to constrain.
+calculateAcademicsScores.field.startYear.placeholder = Consider publications from this year. Leave blank not to constrain.
+calculateAcademicsScores.modal.button.back = Back
+calculateAcademicsScores.modal.title = Publications' scores
+calculateAcademicsScores.text.instructions = Select one or more researchers whose scores you would like to calculate in the given period.
+calculateAcademicsScores.text.result = The academics and their respective scores are listed below. You can click over an academic to inspect each of her publications' scores.
+calculateAcademicsScores.text.selectedAcademic = Professor {0}
+calculateAcademicsScores.title = Calculate Academics Scores
+calculateAcademicsScores.title.description = Calculates the research score with entries from researchers' publications.
+ 
