Add Manage Alumnis, Manage Alumni Histories, Manage Statements and Manage Suggestions. TODO: Business rules of Alumnis

--- a/src/br/ufes/inf/nemo/marvin/sae/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/sae/view/messages.properties
@@ -11,109 +11,102 @@ core.role.student = Enrolled student.
 core.role.visitor = Visitor.
 
 # Menu labels for all functionalities of the package:
-sae.menu.generalSettings = General Settings
-sae.menu.generalSettings.manageAlumnis = Manage Alumnis
-sae.menu.generalSettings.manageAlumniHistories = Manage Alumni Histories
-sae.menu.generalSettings.manageEducations = Manage Course Coordinations
-sae.menu.generalSettings.manageStatements = Manage Course Attendances
-sae.menu.generalSettings.manageSuggestions = Manage Course Attendances
+core.menu.sae = Alumnis Control
+core.menu.sae.manageAlumnis = Manage Alumnis
+core.menu.sae.manageAlumniHistories = Manage Alumni Histories
+core.menu.sae.manageEducations = Manage Educations
+core.menu.sae.manageStatements = Manage Statements
+core.menu.sae.manageSuggestions = Manage Suggestions
 
 # Text for use case "Manage Alumnis":
-manageAcademics.error.deleteAdmin = Cannot delete user {0}: user has System Administrator privileges
-manageAcademics.error.deleteCurrentCoordinator = Cannot delete user {0}: user has a active coordination
-manageAcademics.error.deleteOldCoordinator = Cannot delete user {0}: user has links with old coordinations
-manageAcademics.form.title = Academic registration form
+manageAlumnis.form.title = Alumni form
 manageAlumnis.field.academic.name = Name
-manageAlumnis.field.academic.birthDate = Birth date
-manageAlumnis.field.course = Course
-manageAlumnis.field.education.year = Graduation Year
-manageAlumnis.field.education.educationalInstitution = Educational Instituition 
-manageAcademics.field.creationDate = Created at
-manageAcademics.field.email = E-mail
-manageAcademics.field.lattesId = Lattes ID
-manageAcademics.field.lattesId.placeholder = Long number at the end of the URL of the CV in the Lattes platform (http://lattes.cnpq.br/<Lattes ID>)
-manageAcademics.field.lastLoginDate = Last login at
-manageAcademics.field.lastUpdateDate = Updated at
-manageAcademics.field.name = Name
-manageAcademics.field.name.placeholder = Full name of the academic
-manageAcademics.field.roles = Roles
-manageAcademics.field.academicRoles = Academic Roles
-manageAcademics.field.shortName = Short name
-manageAcademics.field.shortName.placeholder = The name you prefer to be called
-manageAcademics.field.cpf = CPF
-manageAcademics.field.identityCard = Identity Card (RG)
-manageAcademics.field.identityCard.placeholder = Only Numbers
-manageAcademics.field.birthCity = Birth City
-manageAcademics.field.birthCity.placeholder = What city you were born?
-manageAcademics.field.nationality = Nationality
-manageAcademics.field.nationality.placeholder = Country name
-manageAcademics.text.deleteSucceeded = Successfully deleted {0,choice,0#no academics|1#one academic|1<{0,number,integer} academics}
-manageAcademics.text.filter.byName = Filter by name:
-manageAcademics.text.noEntities = No Academic registered yet
-manageAcademics.text.noEntitiesFiltered = No academic found for this filter
-manageAcademics.title = Manage Academics
-manageAcademics.title.description = Create, retrieve, update and delete data about academics
-manageAcademics.title.create = Register new Academic
-manageAcademics.title.create.description = Insert new academic information
-manageAcademics.title.description = Create, retrieve, update and delete data about academics
-manageAcademics.title.update = Update Academic
-manageAcademics.title.update.description = Modify an existing academic's information
-manageAcademics.title.retrieve = Academic's data
-manageAcademics.title.retrieve.description = View an existing academic's information
+manageAlumnis.field.academic.email = E-mail
+manageAlumnis.field.academic.cpf = CPF
+manageAlumnis.field.academic.nationality = Nationality
+manageAlumnis.field.course.name = Name
+manageAlumnis.field.course.courseCode = Code
+manageAlumnis.field.course.academicLevels = Academic Level
+manageAlumnis.field.courseAttendance.startDate.year = Start Year
+manageAlumnis.field.courseAttendance.endDate.year = Graduation Year
+manageAlumnis.text.deleteSucceeded = Successfully deleted {0,choice,0#no alumnis|1#one alumni|1<{0,number,integer} alumnis}
+manageAlumnis.text.filter.byName = Filter by name:
+manageAlumnis.text.noEntities = No Alumni registered yet
+manageAlumnis.text.noEntitiesFiltered = No alumni found for this filter
+manageAlumnis.title = Manage Alumnis
+manageAlumnis.title.description = Create, retrieve, update and delete data about alumnis
+manageAlumnis.title.description = Create, retrieve, update and delete data about alumnis
+manageAlumnis.title.retrieve = Alumni's data
+manageAlumnis.title.retrieve.description = View an existing alumni's information
 
-# Text for use case "Manage Courses":
-manageCourses.error.deleteCourseWithCoordination = Cannot delete course {0}: course has links with coordinations
-manageCourses.form.title = Course registration form
-manageCourses.field.creationDate = Created at
-manageCourses.field.lastLoginDate = Last login at
-manageCourses.field.lastUpdateDate = Updated at
-manageCourses.field.name = Name
-manageCourses.field.name.placeholder = Name of the course
-manageCourses.field.courseCode = Code
-manageCourses.field.academicLevels = Academic Level
-manageCourses.field.courseCoordinator = Course Coordinator
-manageCourses.field.courseCoordinator.placeholder = Name of the Course Coordinator
-manageCourses.text.deleteSucceeded = Successfully deleted {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
-manageCourses.text.filter.byName = Filter by name:
-manageCourses.text.noEntities = No Course registered yet
-manageCourses.text.noEntitiesFiltered = No course found for this filter
-manageCourses.title = Manage Courses
-manageCourses.title.description = Create, retrieve, update and delete data about courses
-manageCourses.title.create = Register new Course
-manageCourses.title.create.description = Insert new course information
-manageCourses.title.update = Update Course
-manageCourses.title.update.description = Modify an existing course's information
-manageCourses.title.retrieve = Course's data
-manageCourses.title.retrieve.description = View an existing course's information
-manageCourses.title.courseCoordination = Course Coordination
-manageCourses.title.description.courseCoordination = Add or finalize a coordination on a course
+# Text for use case "Manage Alumni Histories":
+manageAlumniHistories.form.title = Alumni Histories registration form
+manageAlumniHistories.field.alumniName = Alumni
+manageAlumniHistories.field.sendDate = Sent at
+manageAlumniHistories.field.livesES = Lives in ES?
+manageAlumniHistories.field.practiceArea = Pratice Area
+manageAlumniHistories.field.degreeArea = DegreeArea
+manageAlumniHistories.field.salaryRange = Salary Range
+manageAlumniHistories.field.educationType = Education Type
+manageAlumniHistories.text.deleteSucceeded = Successfully deleted {0,choice,0#no histories|1#one history|1<{0,number,integer} histories}
+manageAlumniHistories.text.filter.byName = Filter by name:
+manageAlumniHistories.text.noEntities = No Histories registered yet
+manageAlumniHistories.text.noEntitiesFiltered = No history found for this filter
+manageAlumniHistories.text.selectPracticeArea = Select an option
+manageAlumniHistories.text.selectDegreeArea = Select an option
+manageAlumniHistories.text.selectSalaryRange = Select an option
+manageAlumniHistories.text.selectEducationType = Select an option
+manageAlumniHistories.text.selectAlumni = Select an alumni
+manageAlumniHistories.text.noAlumnis = No Alumnis registered yet
+manageAlumniHistories.title = Manage Histories
+manageAlumniHistories.title.description = Create, retrieve, update and delete data about histories
+manageAlumniHistories.title.create = Register new History
+manageAlumniHistories.title.create.description = Insert new history information
+manageAlumniHistories.title.update = Update History
+manageAlumniHistories.title.update.description = Modify an existing history's information
+manageAlumniHistories.title.retrieve = History's data
+manageAlumniHistories.title.retrieve.description = View an existing history's information
 
-# Text for use case "Manage Course Coordinations":
-manageCourseCoordinations.button.addCoordination = Add Coordination
-manageCourseCoordinations.button.finalizeCoordination = Finalize Coordination
-manageCourseCoordinations.form.title = Course Coordination registration form
-manageCourseCoordinations.field.startDate = Started at
-manageCourseCoordinations.field.endDate = Ended at
-manageCourseCoordinations.field.courseName = Course Name
-manageCourseCoordinations.field.courseCode = Course Code
-manageCourseCoordinations.field.courseCoordinator = Course Coordinator
-manageCourseCoordinations.field.courseCoordinator.placeholder = Name of the Course Coordinator
-manageCourseCoordinations.text.disableSucceeded = Successfully disabled {0,choice,0#no course coordinations|1#one course coordination|1<{0,number,integer} course coordinations}
-manageCourseCoordinations.text.filter.byName = Filter by name:
-manageCourseCoordinations.text.noEntities = No Course Coordinations registered yet
-manageCourseCoordinations.text.noEntitiesFiltered = No course coordination found for this filter
-manageCourseCoordinations.text.selectCourse = Select a Course
-manageCourseCoordinations.text.selectCoordinator = Select a Coordinator
-manageCourseCoordinations.text.noCourses = No Courses without coordination
-manageCourseCoordinations.text.noCoordinators = No Coordinators without coordination
-manageCourseCoordinations.title = Manage Course Coordinations
-manageCourseCoordinations.title.description = Create, retrieve and disable data about course coordinations
-manageCourseCoordinations.title.create = Register new Course Coordination
-manageCourseCoordinations.title.create.description = Insert new course coordination information
-manageCourseCoordinations.title.retrieve = Course Coordination's data
-manageCourseCoordinations.title.retrieve.description = View an existing course coordination's information
-manageCourseCoordinations.title.courseCoordination = Course Coordination
-manageCourseCoordinations.title.description.courseCoordination = Add or finalize a coordination on a course coordination
+# Text for use case "Manage Statements":
+manageStatements.form.title = Statements registration form
+manageStatements.field.sendDate = Sent at
+manageStatements.field.content = Content
+manageStatements.field.courseName = Course Name
+manageStatements.field.statementStatus = Statement Status
+manageStatements.text.deleteSucceeded = Successfully deleted {0,choice,0#no statements|1#one statement|1<{0,number,integer} statements}
+manageStatements.text.filter.byName = Filter by name:
+manageStatements.text.noEntities = No Statements registered yet
+manageStatements.text.noEntitiesFiltered = No statement found for this filter
+manageStatements.text.noCourses = No Courses registered yet
+manageStatements.text.selectCourse = Select a Course
+manageStatements.title = Manage Statements
+manageStatements.title.description = Create, retrieve and delete data about statements
+manageStatements.title.create = Register new Statement
+manageStatements.title.create.description = Insert new statement information
+manageStatements.title.update = Update Statement
+manageStatements.title.update.description = Modify an existing statement's information
+manageStatements.title.retrieve = Statement's data
+manageStatements.title.retrieve.description = View an existing statement's information
+
+# Text for use case "Manage Suggestions":
+manageSuggestions.form.title = Suggestions registration form
+manageSuggestions.field.sendDate = Sent at
+manageSuggestions.field.content = Content
+manageSuggestions.field.courseName = Course Name
+manageSuggestions.text.deleteSucceeded = Successfully deleted {0,choice,0#no suggestions|1#one suggestion|1<{0,number,integer} suggestions}
+manageSuggestions.text.filter.byName = Filter by name:
+manageSuggestions.text.noEntities = No Suggestions registered yet
+manageSuggestions.text.noEntitiesFiltered = No Suggestions found for this filter
+manageSuggestions.text.noCourses = No Courses registered yet
+manageSuggestions.text.selectCourse = Select a Course
+manageSuggestions.title = Manage Suggestions
+manageSuggestions.title.description = Create, retrieve and delete data about suggestions
+manageSuggestions.title.create = Register new Suggestion
+manageSuggestions.title.create.description = Insert new suggestion information
+manageSuggestions.title.update = Update Suggestion
+manageSuggestions.title.update.description = Modify an existing suggestion's information
+manageSuggestions.title.retrieve = Suggestion's data
+manageSuggestions.title.retrieve.description = View an existing suggestion's information
 
 # Text for use case "Manage Course Attendances":
 manageCourseAttendances.button.addAttendance = Add Attendance
