Add approve and reject functions in manage statements. Fix icons of buttons in interface. Business rule to Alumni History: just one history by alumni data.

--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -24,6 +24,8 @@ jbutler.crud.button.retrieve = View
 jbutler.crud.button.update = Modify
 jbutler.crud.button.delete = Delete
 jbutler.crud.button.disable = Disable
+jbutler.crud.button.approve = Approve
+jbutler.crud.button.reject = Reject
 jbutler.crud.button.cancelDeletion = Cancel
 jbutler.crud.button.confirmDeletion = Confirm deletion
 jbutler.crud.button.cancelDeactivation = Cancel
@@ -38,6 +40,8 @@ jbutler.crud.help.hotkeys.retrieve = open the details of the selected item
 jbutler.crud.help.hotkeys.update = open the form for modifying the selected item
 jbutler.crud.help.hotkeys.delete = add the selected item to the trash bin for deletion
 jbutler.crud.help.hotkeys.disable = add the selected item to the trash bin for deactivation
+jbutler.crud.help.hotkeys.approve = approve the selected item
+jbutler.crud.help.hotkeys.reject = reject the selected item
 jbutler.crud.help.hotkeys.cancelDeletion = cancel deletion and restore the items in the trash bin
 jbutler.crud.help.hotkeys.confirmDeletion = confirm the deletion of the items in the trash bin
 jbutler.crud.help.hotkeys.cancelDeletion = cancel deactivation and restore the items in the trash bin
@@ -54,6 +58,8 @@ jbutler.crud.hotkey.retrieve = r
 jbutler.crud.hotkey.update = u
 jbutler.crud.hotkey.delete = d
 jbutler.crud.hotkey.disable = d
+jbutler.crud.hotkey.approve = a
+jbutler.crud.hotkey.reject = r
 jbutler.crud.hotkey.cancelDeletion = esc
 jbutler.crud.hotkey.confirmDeletion = y
 jbutler.crud.hotkey.cancelDeactivation = esc
